# InfotecsTestTask

./: CMakeLists.txt  README.md  main.cpp
logger/: CMakeLists.txt  baselogger.cpp  baselogger.h  error.h  logger.cpp  logger.h  socketlogger.cpp  socketlogger.h  util.cpp  util.h
logger/baselogger/: baselogger.cpp  baselogger.h
logger/filelogger/: logger.cpp  logger.h
logger/socketlogger/: socketlogger.cpp  socketlogger.h
logger/util/: util.cpp  util.h
statistic/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  logger_tests.cpp
